<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/light_green_primary"
    tools:context=".MainActivity">

    <!-- IP Input Layout -->
    <LinearLayout
        android:id="@+id/connectLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <!-- Row with IP input and Connect button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/serverIpInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_server_ip_e_g_http_10_73_14_153_5000" />

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:text="Connect" />
        </LinearLayout>

        <!-- Return to Streaming button on a new row -->
        <Button
            android:id="@+id/returnToStreamButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:text="Return to Streaming" />
    </LinearLayout>

    <!-- Video streaming page container (initially hidden) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoPageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Return button in the top-left corner -->
        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@color/dark_blue"
            android:contentDescription="Return to IP input"
            android:src="@android:drawable/ic_media_previous"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Refresh button in the top-right corner -->
        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_blue"
            android:contentDescription="@string/refresh_button_description"
            android:src="@android:drawable/ic_menu_rotate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- First video stream Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/videoCard1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:transitionName="video_card_1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/videoCard2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:clipToPadding="false"
                android:clipToOutline="false">

                <ImageView
                    android:id="@+id/videoView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/video_stream_1_description"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:id="@+id/fullscreenButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="8dp"
                    android:background="@color/dark_blue"
                    android:contentDescription="@string/fullscreen_button_description"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_menu_crop" />

                <ImageButton
                    android:id="@+id/pauseButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_margin="8dp"
                    android:background="@color/dark_blue"
                    android:contentDescription="@string/pause_button_description"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_media_pause" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <!-- Second video stream Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/videoCard2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:transitionName="video_card_2"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/videoCard1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:clipToPadding="false"
                android:clipToOutline="false">

                <ImageView
                    android:id="@+id/videoView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/video_stream_2_description"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:id="@+id/fullscreenButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="8dp"
                    android:background="@color/dark_blue"
                    android:contentDescription="@string/fullscreen_button_description"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_menu_crop" />

                <ImageButton
                    android:id="@+id/pauseButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_margin="8dp"
                    android:background="@color/dark_blue"
                    android:contentDescription="@string/pause_button_description"
                    android:padding="8dp"
                    android:src="@android:drawable/ic_media_pause" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
